# ops-med

./: .mega-linter.yml  Cargo.toml  Dockerfile  README.md  app.yaml
.github/workflows/: build.yaml  mega-linter.yml  release.yaml
dev/: compose.yaml  person-data.ndjson  procedure-data.ndjson
resources/: alleOPS_ab2008_Mapping.csv  alleSubstanzenMapping.csv
src/: config.rs  fhir.rs  main.rs
