[package]
name = "ops-med"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.37.0", features = ["ssl", "cmake-build"] }
tokio = { version = "1.41.1", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
futures = "0.3.31"
config = "0.15.8"
serde_derive = "1.0.215"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.1"
serde_json = "1.0.133"
fhir-model = { version = "0.12.0", default-features = false, features = ["builders", "r4b"] }
farmhash = "1.1.5"
